calicoctl/calicoctl/commands/convert/testdata/cnp-l3l4-l7.yaml
# A representative CiliumNetworkPolicy exercising L3 (endpoint + CIDR), L4
# (ports), L7 HTTP, a deny rule, and the "world" entity. Convert with:
#   calicoctl convert --from=cilium -f cnp-l3l4-l7.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: web-policy
  namespace: prod
spec:
  endpointSelector:
    matchLabels:
      app: web
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /api
  ingressDeny:
    - fromCIDR:
        - 10.10.0.0/16
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
